// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"workerType" option should support the "Worker" object value for inline workers with fallback: errors 1`] = `Array []`;

exports[`"workerType" option should support the "Worker" object value for inline workers with fallback: result 1`] = `"{\\"postMessage\\":true,\\"onmessage\\":true}"`;

exports[`"workerType" option should support the "Worker" object value for inline workers with fallback: warnings 1`] = `Array []`;

exports[`"workerType" option should support the "Worker" object value for inline workers without fallback: errors 1`] = `Array []`;

exports[`"workerType" option should support the "Worker" object value for inline workers without fallback: result 1`] = `"{\\"postMessage\\":true,\\"onmessage\\":true}"`;

exports[`"workerType" option should support the "Worker" object value for inline workers without fallback: warnings 1`] = `Array []`;

exports[`"workerType" option should support the "Worker" object value: errors 1`] = `Array []`;

exports[`"workerType" option should support the "Worker" object value: module 1`] = `
"export default function Worker_fn() {
  return new Worker(__webpack_public_path__ + \\"test.worker.js\\", {\\"type\\":\\"classic\\",\\"name\\":\\"worker-name\\"});
}
"
`;

exports[`"workerType" option should support the "Worker" object value: result 1`] = `"{\\"postMessage\\":true,\\"onmessage\\":true}"`;

exports[`"workerType" option should support the "Worker" object value: warnings 1`] = `Array []`;

exports[`"workerType" option should support the "Worker" string value: errors 1`] = `Array []`;

exports[`"workerType" option should support the "Worker" string value: module 1`] = `
"export default function Worker_fn() {
  return new Worker(__webpack_public_path__ + \\"test.worker.js\\");
}
"
`;

exports[`"workerType" option should support the "Worker" string value: result 1`] = `"{\\"postMessage\\":true,\\"onmessage\\":true}"`;

exports[`"workerType" option should support the "Worker" string value: warnings 1`] = `Array []`;

exports[`"workerType" option should use "Worker" by default: errors 1`] = `Array []`;

exports[`"workerType" option should use "Worker" by default: module 1`] = `
"export default function Worker_fn() {
  return new Worker(__webpack_public_path__ + \\"test.worker.js\\");
}
"
`;

exports[`"workerType" option should use "Worker" by default: result 1`] = `"{\\"postMessage\\":true,\\"onmessage\\":true}"`;

exports[`"workerType" option should use "Worker" by default: warnings 1`] = `Array []`;
